# block-chain-basic-demo

./: README.md  docker-compose-node2.yaml  docker-compose.yaml  pyproject.toml
golang/: Dockerfile  README.md  docker-compose.yaml  go.mod
golang/src/: server.go
python/: README.md  docker-compose-node1.yaml  docker-compose.yaml
python/src/: test.py
src/: blockchain.py  server.py
