[tool.poetry]
name = "learnbycreating"
version = "0.1.0"
description = "blockchain, working mechanism,learn"
authors = ["roshan"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.18.4"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
